--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,78 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+/.idea/libraries/Maven__ch_qos_logback_logback_classic_1_5_16.xml
+/.idea/libraries/Maven__ch_qos_logback_logback_core_1_5_16.xml
+/.idea/libraries/Maven__com_fasterxml_classmate_1_7_0.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_annotations_2_18_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_core_2_18_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_databind_2_18_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_dataformat_jackson_dataformat_toml_2_18_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_datatype_jackson_datatype_jdk8_2_18_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_datatype_jackson_datatype_jsr310_2_18_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_module_jackson_module_parameter_names_2_18_2.xml
+/.idea/libraries/Maven__com_sun_istack_istack_commons_runtime_4_1_2.xml
+/.idea/libraries/Maven__com_zaxxer_HikariCP_5_1_0.xml
+/.idea/libraries/Maven__io_micrometer_micrometer_commons_1_14_4.xml
+/.idea/libraries/Maven__io_micrometer_micrometer_observation_1_14_4.xml
+/.idea/libraries/Maven__io_smallrye_jandex_3_2_0.xml
+/.idea/libraries/Maven__jakarta_activation_jakarta_activation_api_2_1_3.xml
+/.idea/libraries/Maven__jakarta_annotation_jakarta_annotation_api_2_1_1.xml
+/.idea/libraries/Maven__jakarta_inject_jakarta_inject_api_2_0_1.xml
+/.idea/libraries/Maven__jakarta_persistence_jakarta_persistence_api_3_1_0.xml
+/.idea/libraries/Maven__jakarta_transaction_jakarta_transaction_api_2_0_1.xml
+/.idea/libraries/Maven__jakarta_xml_bind_jakarta_xml_bind_api_4_0_2.xml
+/.idea/libraries/Maven__net_bytebuddy_byte_buddy_1_15_11.xml
+/.idea/libraries/Maven__org_antlr_antlr4_runtime_4_13_0.xml
+/.idea/libraries/Maven__org_apache_logging_log4j_log4j_api_2_24_3.xml
+/.idea/libraries/Maven__org_apache_logging_log4j_log4j_to_slf4j_2_24_3.xml
+/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_core_10_1_36.xml
+/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_el_10_1_36.xml
+/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_websocket_10_1_36.xml
+/.idea/libraries/Maven__org_aspectj_aspectjweaver_1_9_22_1.xml
+/.idea/libraries/Maven__org_checkerframework_checker_qual_3_48_3.xml
+/.idea/libraries/Maven__org_eclipse_angus_angus_activation_2_0_2.xml
+/.idea/libraries/Maven__org_flywaydb_flyway_core_11_3_3.xml
+/.idea/libraries/Maven__org_flywaydb_flyway_database_postgresql_11_3_3.xml
+/.idea/libraries/Maven__org_glassfish_jaxb_jaxb_core_4_0_5.xml
+/.idea/libraries/Maven__org_glassfish_jaxb_jaxb_runtime_4_0_5.xml
+/.idea/libraries/Maven__org_glassfish_jaxb_txw2_4_0_5.xml
+/.idea/libraries/Maven__org_hibernate_common_hibernate_commons_annotations_7_0_3_Final.xml
+/.idea/libraries/Maven__org_hibernate_orm_hibernate_core_6_6_8_Final.xml
+/.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_6_1_Final.xml
+/.idea/libraries/Maven__org_postgresql_postgresql_42_7_5.xml
+/.idea/libraries/Maven__org_projectlombok_lombok_1_18_36.xml
+/.idea/libraries/Maven__org_slf4j_jul_to_slf4j_2_0_16.xml
+/.idea/libraries/Maven__org_slf4j_slf4j_api_2_0_16.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_autoconfigure_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_data_jpa_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_jdbc_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_json_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_logging_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_tomcat_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_web_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_data_spring_data_commons_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_data_spring_data_jpa_3_4_3.xml
+/.idea/libraries/Maven__org_springframework_spring_aop_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_aspects_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_beans_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_context_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_core_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_expression_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_jcl_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_jdbc_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_orm_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_tx_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_web_6_2_3.xml
+/.idea/libraries/Maven__org_springframework_spring_webmvc_6_2_3.xml
+/.idea/libraries/Maven__org_yaml_snakeyaml_2_3.xml
+/.idea/.gitignore
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/jarRepositories.xml
+/.idea/javaPro-task8.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
